--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
     <!-- 社交媒体分享标题 -->
     <meta property="og:description" content="网盘资源搜索工具" />
     <!-- 社交媒体分享描述 -->
-    <meta property="og:url" content="https://github.com/jiangrui1994/CloudSaver" />
+    <meta property="og:url" content="https://github.com/parami13/CloudSaver" />
     <!-- 社交媒体分享链接 -->
     <meta name="twitter:card" content="summary" />
     <!-- Twitter卡片类型 -->
